2012-05-14  Andy Estes  <aestes@apple.com>

        Add WTF_USE_APPKIT to differentiate platforms that use AppKit.framework from other Darwin platforms
        https://bugs.webkit.org/show_bug.cgi?id=86432

        Reviewed by Maciej Stachowiak.

        * wtf/Platform.h:

2012-05-14  Mark Rowe  <mrowe@apple.com>

        <http://webkit.org/b/86320> WTF.xcodeproj builds with -O3 in debug builds

        Reviewed by Simon Fraser.

        * WTF.xcodeproj/project.pbxproj: Ensure that the debug configuration uses the
        same settings as the debug variant would.

2012-05-14  Wei James  <james.wei@intel.com>

        [Chromium] ImageDiff should be build for host on Android
        https://bugs.webkit.org/show_bug.cgi?id=82039

        Reviewed by Adam Barth.

        * WTF.gyp/WTF.gyp:

2012-05-14  Yong Li  <yoli@rim.com>

        DFG JIT is not ARM EABI compatible
        https://bugs.webkit.org/show_bug.cgi?id=84449

        Reviewed by Filip Pizlo.

        Add COMPILER_SUPPORTS(EABI) when __ARM_EABI__
        or __EABI__ is defined.

        * wtf/Compiler.h:

2012-05-10  Michał Pakuła vel Rutka  <m.pakula@samsung.com>

        [EFL] Add OwnPtr specialization for Eina_Hash.
        https://bugs.webkit.org/show_bug.cgi?id=85046

        Reviewed by Andreas Kling.

        Add an override for Eina_Hash for EFL port.

        * wtf/OwnPtrCommon.h:
        (WTF):
        * wtf/efl/OwnPtrEfl.cpp:
        (WTF::deleteOwnedPtr):
        (WTF):

2012-05-09  Filip Pizlo  <fpizlo@apple.com>

        It should be possible to get useful debug logging from the JIT memory allocator
        https://bugs.webkit.org/show_bug.cgi?id=86042

        Reviewed by Geoff Garen.

        * wtf/MetaAllocator.cpp:
        (WTF::MetaAllocator::findAndRemoveFreeSpace):
        (WTF::MetaAllocator::addFreeSpace):
        (WTF::MetaAllocator::dumpProfile):

2012-05-08  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r116440.